updates in kvs-2 and hentschel

--- a/unfinished/hentschel/chapter.tex
+++ b/unfinished/hentschel/chapter.tex
@@ -1,6 +1,6 @@
 \fenicschapter{Cerebrospinal Fluid Flow}
               {Cerebrospinal Fluid Flow}
-              {Susanne Hentschel, Svein Linge, Emil Alf L{\o}vgren and Kent-Andre Mardal}
+              {Susanne St\o le-Hentschel, Svein Linge, Alf Emil L{\o}vgren and Kent-Andre Mardal}
               {hentschel}
 
 
@@ -97,7 +97,9 @@ ICPS, and G2, c.f. Chapter~\ref{chap:kvs-1}.
 
 We model the CSF flow in the upper spinal canal as a Newtonian fluid
 \index{Newtonian fluid} with viscosity and density similar to water
-at body temperature. In the presented experiments, we focus on the
+at body temperature. The upper spinal canal is represented as a tube 
+with an inner elliptic or circular sylinder removed.  
+In the presented experiments, we focus on the
 dynamics around the spinal cord. The tissue surrounding the fluid is
 modeled as impermeable and rigid throughout the cardiac cycle. To
 simulate CSF flow, we apply the Navier-Stokes \index{Navier-Stokes}
@@ -144,7 +146,7 @@ The velocities are maximum absolute anterior CSF flow velocities  taken from con
 and Chiari I malformation patients~\cite{HofmannWarmuth-MetzBendszusEtAl2000}.
 By stroke volume we mean the volume that moves up and down through cross section in 
 the SAS during one cardiac cycle and the value is taken from~\cite{GuptaSoellingerBoesigerEtAl2009}.
-Cross sections area  20--40 cm from the foramen magnum are taken from~\cite{LothYardimciAlperin2001}.
+Cross section areas  20--40 cm from the foramen magnum are taken from~\cite{LothYardimciAlperin2001}.
 }
 \end{center}
 \end{table*}
@@ -234,7 +236,7 @@ transport of 0.27 ml.
 \begin{figure}\begin{center}
 \includegraphics[width = 0.8\textwidth]{chapters/hentschel/pdf/sin_pulse.pdf}
 \caption{Two different CSF flow pulses. The blue line is a sine pulse,
-    whereas the green represent the pressure pulse in a heart chamber.}
+    whereas the green is derived from the pressure pulse in a heart chamber.}
 \label{fig:sin_pulse}.
 \end{center}\end{figure}
 
@@ -743,7 +745,7 @@ the time steps $t=0.07s, 0.18s, 0.25s$.}
 \includegraphics[width=0.3\textwidth]{chapters/hentschel/pdf/pulse_f1_08_elliptic_eccentric_sysmax_nmb7.pdf}
 \includegraphics[width=0.3\textwidth]{chapters/hentschel/pdf/pulse_f1_08_elliptic_eccentric_sysdia_nmb18.pdf}
 \includegraphics[width=0.3\textwidth]{chapters/hentschel/pdf/pulse_f1_08_elliptic_eccentric_diamin1_nmb25.pdf}
-\caption{The case with and translated elliptic cord. The pictures show the velocity in z-direction for the non-symmetric pulse at the time steps $t=0.07s, 0.18s, 0.25s$.}
+\caption{The case with a translated elliptic cord. The pictures show the velocity in z-direction for the non-symmetric pulse at the time steps $t=0.07s, 0.18s, 0.25s$.}
 \label{fig:case3b}.
 \end{center}\end{figure}
 
