--- a/unfinished/hentschel/chapter.tex
+++ b/unfinished/hentschel/chapter.tex
@@ -816,7 +816,7 @@ various idealized geometries representing the
 spinal cord and the surrounding subarachnoid space. We have further 
 quantified the effect of abnormal geometries and boundary conditions 
 in terms of pressure and flow deviations. From our simulations, it seems
-that pressure instabilities are quickely damped out under realistic Reynolds and 
+that pressure instabilities are quickly damped out under realistic Reynolds and 
 Womersley numbers. These instabilities travel less than 1 cm and it seems unlikely 
 that Chiari induced pressure instabilities will produce cysts several centimeters further
 down in the spinal canal. 
