--- a/unfinished/hentschel/chapter.tex
+++ b/unfinished/hentschel/chapter.tex
@@ -88,18 +88,18 @@ Chiari I malformation and the cyst.
 
 It is the purpose of this
 chapter to 
-show how relavant CFD solvers in \fenics\ may be used to investigate unresolved issues in CSF flow dynamics. 
+show how relevant CFD solvers in \fenics\ may be used to investigate unresolved issues in CSF flow dynamics. 
 Specifically, we investigate
 different boundary conditions, different geometries, and also how far velocity and pressure disturbances travel
 under realistic conditions. We also compare the different solvers Chorin,
-ICPS, and G2, c.f. Chapter~\ref{chap:kvs-1}.
+IPCS, and G2, c.f. Chapter~\ref{chap:kvs-1}.
 
 \section{Mathematical description}
 
 We model the CSF flow in the upper spinal canal as a Newtonian fluid
 \index{Newtonian fluid} with viscosity and density similar to water
 at body temperature. The upper spinal canal is represented as a tube 
-with an inner elliptic or circular sylinder removed.  
+with an inner elliptic or circular cylinder removed.  
 In the presented experiments, we focus on the
 dynamics around the spinal cord. The tissue surrounding the fluid is
 modeled as impermeable and rigid throughout the cardiac cycle. To
@@ -168,7 +168,7 @@ first order velocity elements. The code can be found in \emp{csf\_flow.py}.
 \end{minipage}
 
 \paragraph{Boundary conditions}  
-The mesh boundaries at the inlet cross section, the outlet cross section, and the SAS boundaries are defined by the respective classes \emp{Top}, \emp{Bottom}, and \emp{Contour}. They are implemented as subclasses of \emp{SubDomain}, similarily to the given example of \emp{Top}.
+The mesh boundaries at the inlet cross section, the outlet cross section, and the SAS boundaries are defined by the respective classes \emp{Top}, \emp{Bottom}, and \emp{Contour}. They are implemented as subclasses of \emp{SubDomain}, similarly to the given example of \emp{Top}.
 \begin{python}
 class Top(SubDomain):
 	def __init__(self, index, z_max, z_min):
@@ -643,7 +643,7 @@ of interest to quantify how far pressure and velocity instabilities can travel u
 To create pressure and velocity instabilities, we assign  time-dependent but flat inlet and outlet 
 velocity conditions on the previously described geometry and investigate how far these instabilities
 travel with the flow. We also compare three different solvers, namely the Chorin, IPCS, and G2 schemes. 
-All schemes do, however, use first order elements for both velocity and pressure. In Table~\ref{solvers:pressurediff}, we list the pressure differences at various places along the spinal coord computed with 
+All schemes do, however, use first order elements for both velocity and pressure. In Table~\ref{solvers:pressurediff}, we list the pressure differences at various places along the spinal cord computed with 
 the three different solvers, slightly after systole. Strangely, it appears that the G2 solver requires a 30\% bigger
 pressure gradient between the top and the bottom in this case. However, the 
 G2 solver has also produced some peculiar results in Chapter~\ref{chap:kvs-1}. We also remark that
