--- a/book.tex
+++ b/book.tex
@@ -75,7 +75,7 @@
 %%%\fenicsinput{shan}
 %%%\fenicsinput{lopes}
 \fenicsinput{kvs-2}
-\fenicsinput{hentschel}
+%%%\fenicsinput{hentschel}
 \fenicsinput{narayanan}
 %%%\fenicsinput{oelgaard-1}
 %%%\fenicsinput{nikbakht}
